added github link to readme and added a description to the package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@theredhead/dateformat",
   "version": "0.0.2",
-  "description": "",
+  "description": "Date formatting like the PHP kids",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p .",
